2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (set_escape_char): Recast error
	message to describe attempted operation and tell the user what
	we're doing about being instructed to use an invalid escape
	character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Be more helpful to
	ambiguous type size escape sequence users; offer advice in
	terms of the current escape character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Fix SEGV when exiting
	gxditview.  The `postdriver` pointer always referred to
	allocated memory except when the `-X` option was given; it was
	then assigned the address of a #defined string literal.  It was
	thus statically allocated and an error to attempt to `free()`
	it.  Duplicate the string on the heap instead so that we can
	clean up uniformly regardless of postprocessor.  Problem caused
	by me when introducing `xexit()` in commit 6769e56aab, 20 June.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac (@o, n2, sk (f, ++): Consistently call `@err`
	macro with `do`.

2022-09-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Initialize new register `_f`, the value of `$m`
	{column count} of the previous pending footnote, to zero,
	meaning there is no previous pending footnote.
	(@o): Emit diagnostic when flushing footnotes into a different
	column layout then the pending footnote last added.  Set `_f` to
	zero.
	((f): Emit diagnostic when enqueueing footnote using a different
	column layout than the previous pending footnote used.  Set `_f`
	to `$m`.

	Fixes <https://savannah.gnu.org/bugs/?58736>.  Thanks to Dave
	Kemper for the report and discussion.

2022-09-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Explicitly initialize and annotate internal
	register `?f`.
